--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.5
   image_picker: ^0.8.7+5
   carousel_slider: ^4.2.1
+  line_awesome_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
